First try adapter Migration